# pepper_launch

./: CMakeLists.txt  README.md  package.xml
config/: logitech_controller.yaml  pepper_full.rviz
data/objects/tabascobox_green/: offset.xml  tabascobox_green.0.pos  tabascobox_green.cao  tabascobox_green.init  tabascobox_green.xml  tracker.yaml
data/transformation/: eMh_pepper.xml
launch/: camera_bottom.launch  camera_bottom640.launch  camera_bottom640_wifi.launch  camera_bottom_wifi.launch  camera_top.launch  camera_top_wifi.launch  cmd_joystick_wifi.launch  hand_pose_camera_bottom.launch  hand_pose_camera_bottom_calibration_wrist_to_target.launch  hand_pose_camera_bottom_createTargetModel.launch  hand_pose_camera_bottom_naoqi_driver.launch  mbt_tabasco.launch  mbt_tabasco_naoqi_driver.launch  pepper_full.launch  pepper_full_wifi.launch  whycon_pepper_multi.launch
launch/pepper_hand_pose/: hand_pose_camera_bottom_calibration_wrist_to_target_naoqi_driver.launch  hand_pose_camera_bottom_createTargetModel_naoqi_driver.launch  hand_pose_camera_bottom_naoqi_driver.launch  whycon_hand_pepper.launch
scripts/: vision_videorecord.py  vision_videorecord_one_cam.py
share/: pepper_camera_bottom_320x240.yaml  pepper_camera_bottom_640x480.yaml  pepper_camera_top_320x240.yaml  pepper_camera_top_640x480.yaml
