<?xml version="1.0"?>
<package>
  <name>pepper_launch</name>
  <version>1.0.0</version>
  <description>Contains launch files and data used to control Pepper</description>
  <maintainer email="Fabien.Spindler@inria.fr">Fabien Spindler</maintainer>
  <author email="Giovanni.Claudio@inria.fr">Giovanni Claudio</author>
  <author email="Fabien.Spindler@inria.fr">Fabien Spindler</author>
  <license>BSD</license>
  <url type="repository">git://github.com/lagadic/pepper_launch.git</url>

  <buildtool_depend>catkin</buildtool_depend>

</package>
